--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:wght@100;400&family=Open+Sans&family=Playfair+Display&family=Roboto:wght@400;700&family=Source+Serif+Pro&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<title>CAPSTONE PROJECT</title>
 
 </head>
 
-<body class="bg-dark text-center">
+<body class="text-center">
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
-	  <a class="navbar-brand ml-5" href="#">Anthony Culdora</a>
+	<nav class="navbar navbar-expand-lg navbar-dark text-white">
+	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -41,11 +42,49 @@
 	</nav>
 
 	<img class="img-fluid mt-5 mt-md-0 rounded-circle" src="./images/selfie.png" width="250">
-	<h1 class="bg-dark text-light mt-3 col-sd-8">"Hi! I'm Ton-Ton a Web Page Developer"</h1>
+	<h1 class="text-light mt-3 col-sd-8">"Hi! I'm Ton-Ton a Web Page Developer"</h1>
 
+<div class="m-5 bg-fluid ">
+	<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+</div>
 
+<div class="mt-5 mb-5 d-sm-block d-md-flex justify-content-around ml-3 mr-3 ">
 
+			<div class="col-md-4 text-center ">
+				<img id="icon" class="img-fluid rounded-circle" src="images/facebook.jpg">
+				<a class="text-white" href="https://www.facebook.com/tonyieh/">Facebook</a>
+			</div> 
 
+			<div class="col-md-4 text-center">
+				<img id="icon" class="img-fluid rounded-circle" src="images/youtube.jpg">
+				<a class="text-white" href="https://www.youtube.com/channel/UCycQvnVl5zq4WXroQH5q_DA">Youtube Channel</a>
+			</div> 
+
+			<div class="col-md-4 text-center">
+				<img id="icon" class="img-fluid rounded-circle" src="images/gmail.jpg">
+				<a class="text-white" href="mailto: a18.culdora@gmail.com">Email</a>
+			</div> 
+
+		</div>
+
+		<div>
+
+			<h3 class="text-white">ABOUT ME</h3>
+			<p1 class="text-white ml-5 mr-5">A hard-working, goal-oriented, Mechanical
+Engineer with flexible skills, fast learning
+capabilities and efficient working style even
+under pressure. 
+</p1>
+		</div>
+
+<div class="m-5">
+		<a class="text-white" href="./resume.pdf">Want to know more?</a>
+
+</div>
 
 
 
