--- a/pages/contactsection.html
+++ b/pages/contactsection.html
@@ -13,8 +13,8 @@
 </head>
 <body class="text-center">
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-dark">
-	  <a class="navbar-brand ml-5" href="#">Anthony Culdora</a>
+	<nav class="navbar navbar-expand-lg navbar-dark text-white sticky-top">
+	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -37,32 +37,32 @@
 	  </div>
 	</nav>
 
-	<div class="container-fluid bg-dark text-dark min-vh-100 p-md-5">
+	<div class="container-fluid text-white min-vh-100 p-md-5">
 
 
-					<div class="bg-dark min-vh-100 text-dark">
-					<h2 class="pt-5 pb-5">Contact Me</h2>
+					<div class="min-vh-100 text-white">
+					<h2 class="pt-2 pb-5">Contact Me</h2>
 					
-					<form class="p-3 offset-md-2 offset-xl-4 col-md-8 col-xl-4 border border-white text-dark">
+					<form class="p-3 offset-md-2 offset-xl-4 col-md-8 col-xl-4 border border-white bg-dark text-dark">
 
 
 						
-						<div class="text-dark">
-							  	<label for="name" class="form-label text-dark">Name</label>
+						<div class="text-white">
+							  	<label for="name" class="form-label text-white">Name</label>
 							  	<input type="text" name="name" id="name" class="form-control text-dark" placeholder="Your Name">
 							</div>
 
 							<div>
-							  	<label for="email" class="form-label text-dark">Email Address</label>
+							  	<label for="email" class="form-label text-white">Email Address</label>
 							  	<input type="email" name="email" id="email" class="form-control" placeholder="name@example.com">
 							</div>
 
 							<div>
-							  	<label for="contact_number" class="form-label text-dark">Contact Number</label>
+							  	<label for="contact_number" class="form-label text-white">Contact Number</label>
 							  	<input type="text" name="contact_number" id="contact_number" class="form-control text-dark" placeholder="+63 **** *****">
 							</div>
 
-							<div class="form-group text-dark">
+							<div class="form-group text-white">
                             <label for="formGroupExampleInput2">Message</label>
                             <textarea class="form-control text-dark" name="" id="formGroupExampleInput2" cols="10" rows="10"></textarea>
                         </div>
