--- a/pages/toolsection.html
+++ b/pages/toolsection.html
@@ -13,7 +13,7 @@
 </head>
 <body class="text-center">
 
-	<nav class="navbar navbar-expand-lg navbar-dark text-white">
+	<nav class="navbar navbar-expand-lg navbar-dark text-white sticky-top">
 	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,7 @@
 
 
 <h3 class="text-white m-3">Tools Section</h3>
+<h4 class="text-white m-3">Efficiency</h4>
 
                 <div class="m-3">
                     <div class="text-white">
