update on last commit

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 	    	  <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./pages/contactsection.html">Contact Section</a>
+	        <a class="nav-link" href="./pages/contactsection.html">Contact</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./pages/projectsection.html">Projects Section</a>
+	        <a class="nav-link" href="./pages/projectsection.html">Projects</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./pages/toolsection.html">Tools Section</a>
+	        <a class="nav-link" href="./pages/toolsection.html">Tools</a>
 	      </li>
 	    </ul>
 	  </div>
