--- a/pages/projectsection.html
+++ b/pages/projectsection.html
@@ -25,13 +25,13 @@
 	    	  <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./contactsection.html">Contact Section</a>
+	        <a class="nav-link" href="./contactsection.html">Contact</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./projectsection.html">Projects Section</a>
+	        <a class="nav-link" href="./projectsection.html">Projects</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="./toolsection.html">Tools Section</a>
+	        <a class="nav-link" href="./toolsection.html">Tools</a>
 	      </li>
 	    </ul>
 	  </div>
