--- a/pages/toolsection.html
+++ b/pages/toolsection.html
@@ -38,8 +38,7 @@
 	</nav>
 
 
-<h3 class="text-white m-3">Tools Section</h3>
-<h4 class="text-white m-3">Efficiency</h4>
+<h3 class="text-white m-3">Tools</h3>
 
                 <div class="m-3">
                     <div class="text-white">
