--- a/pages/toolsection.html
+++ b/pages/toolsection.html
@@ -14,7 +14,7 @@
 <body class="text-center">
 
 	<nav class="navbar navbar-expand-lg navbar-dark text-white sticky-top">
-	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
+	  <a class="navbar-brand ml-3" href="../index.html">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -37,13 +37,12 @@
 	  </div>
 	</nav>
 
-
-<h3 class="text-white m-3">Tools</h3>
+<h3 class="text-white m-3">Tools & Proficiency</h3>
 
                 <div class="m-3">
                     <div class="text-white">
                         <img width="150" src="../tools/logo-html5.png"/>
-                        	<p>HTML</p>
+                        <p>HTML</p>
                         <div class="container">
                           <div class="skills html">50%</div>
                         </div>
@@ -63,7 +62,14 @@
                         <img width="150" src="../tools/logo-sublime-text-3.png"/>
                         <p>Sublime</p>
                         <div class="container">
-                          <div class="skills php">70%</div>
+                          <div class="skills sub">70%</div>
+                         </div>
+                        <img width="150" src="../tools/logo-bootstrap.png"/>
+                        <p>Bootstrap</p>
+                        <div class="container">
+                         <div class="skills boots">60%</div>
+                     </div>
+
                         </div>
                     </div>
                 </div>
