--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+
 	<title>CAPSTONE PROJECT</title>
 
 </head>
@@ -18,7 +20,7 @@
 <body class="text-center">
 
 	<nav class="navbar navbar-expand-lg navbar-dark text-white">
-	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
+	  <a class="navbar-brand ml-3" href="./index.html">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -41,8 +43,10 @@
 	  </div>
 	</nav>
 
-	<img class="img-fluid mt-5 mt-md-0 rounded-circle" src="./images/selfie.png" width="250">
+	
 	<h1 class="text-light mt-3 col-sd-8">"Hi! I'm Ton-Ton a Web Page Developer"</h1>
+	<img class="img-fluid mt-5 mt-md-0 rounded-circle" src="./images/selfie.png" width="250">
+
 
 <div class="m-5 bg-fluid ">
 	<span class="fa fa-star checked"></span>
@@ -73,18 +77,15 @@
 
 		<div>
 
-			<h3 class="text-white">ABOUT ME</h3>
-			<p1 class="text-white ml-5 mr-5">A hard-working, goal-oriented, Mechanical
+			<a href="./resume.pdf"><h3>A<span>B</span><span>OUT ME</span></h3></a>
+			<p1 id="blink" class="text-white ml-5 mr-5">A hard-working, goal-oriented, Mechanical
 Engineer with flexible skills, fast learning
 capabilities and efficient working style even
 under pressure. 
 </p1>
 		</div>
 
-<div class="m-5">
-		<a class="text-white" href="./resume.pdf">Want to know more?</a>
 
-</div>
 
 
 
