--- a/pages/contactsection.html
+++ b/pages/contactsection.html
@@ -14,7 +14,7 @@
 <body class="text-center">
 
 	<nav class="navbar navbar-expand-lg navbar-dark text-white sticky-top">
-	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
+	  <a class="navbar-brand ml-3" href="../index.html">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -37,11 +37,11 @@
 	  </div>
 	</nav>
 
-	<div class="container-fluid text-white min-vh-100 p-md-5">
+	<div class="container-fluid text-white min-vh-100 p-md-3">
 
 
 					<div class="min-vh-100 text-white">
-					<h2 class="pt-2 pb-5">Contact Me</h2>
+					<h2 class="pb-5">Contact Me</h2>
 					
 					<form class="p-3 offset-md-2 offset-xl-4 col-md-8 col-xl-4 border border-white bg-dark text-dark">
 
