--- a/pages/projectsection.html
+++ b/pages/projectsection.html
@@ -14,7 +14,7 @@
 <body class="text-center">
 
 	<nav class="navbar navbar-expand-lg navbar-dark text-white">
-	  <a class="navbar-brand ml-3" href="#">Anthony Culdora</a>
+	  <a class="navbar-brand ml-3" href="../index.html">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -42,7 +42,7 @@
 				<div class="accordion" id="accordionExample">
 
 				
-				  <div class="card  bg-dark">
+				  <div class="card bg-dark">
 				    <div class="card-header" id="headingOne">
 				      <h2 class="mb-0">
 				        <button class="btn btn-link btn-block text-center text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
