--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			<div class="col-md-4 text-center ">
 				<img id="icon" class="img-fluid rounded-circle" src="images/facebook.jpg">
-				<a class="text-white" href="https://www.facebook.com/tonyieh/">Facebook</a>
+				<a class="text-white" href="https://www.facebook.com/Cooldoras/">Facebook</a>
 			</div> 
 
 			<div class="col-md-4 text-center">
@@ -78,7 +78,7 @@
 		<div>
 
 			<a href="./resume.pdf"><h3>A<span>B</span><span>OUT ME</span></h3></a>
-			<p1 id="blink" class="text-white ml-5 mr-5">A hard-working, goal-oriented, Mechanical
+			<p1 id="blink" class="text-white ml-5 mr-5 mb-5">A hard-working, goal-oriented, Mechanical
 Engineer with flexible skills, fast learning
 capabilities and efficient working style even
 under pressure. 
