--- a/pages/contactsection.html
+++ b/pages/contactsection.html
@@ -48,23 +48,23 @@
 
 						
 						<div class="text-white">
-							  	<label for="name" class="form-label text-white">Name</label>
+							  	<label for="name" class="form-label text-white m-2">Name</label>
 							  	<input type="text" name="name" id="name" class="form-control text-dark" placeholder="Your Name">
 							</div>
 
 							<div>
-							  	<label for="email" class="form-label text-white">Email Address</label>
+							  	<label for="email" class="form-label text-white m-2">Email Address</label>
 							  	<input type="email" name="email" id="email" class="form-control" placeholder="name@example.com">
 							</div>
 
 							<div>
-							  	<label for="contact_number" class="form-label text-white">Contact Number</label>
+							  	<label for="contact_number" class="form-label text-white m-2">Contact Number</label>
 							  	<input type="text" name="contact_number" id="contact_number" class="form-control text-dark" placeholder="+63 **** *****">
 							</div>
 
-							<div class="form-group text-white">
+							<div class="form-group text-white m-2">
                             <label for="formGroupExampleInput2">Message</label>
-                            <textarea class="form-control text-dark" name="" id="formGroupExampleInput2" cols="10" rows="10"></textarea>
+                            <textarea class="form-control text-dark" name="" id="formGroupExampleInput2" cols="10" rows="5"></textarea>
                         </div>
 
 
