--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	  </div>
 	</nav>
 
-	
-	<h1 class="text-light mt-3 col-sd-8">"Hi! I'm Ton-Ton a Web Page Developer"</h1>
 	<img class="img-fluid mt-5 mt-md-0 rounded-circle" src="./images/selfie.png" width="250">
+	<h1 class="text-light mt-3 col-sd-8">"Hi! I'm Ton-Ton a Web Developer"</h1>
+	
 
 
 <div class="m-5 bg-fluid ">
