--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="text-center">
 
-	<nav class="navbar navbar-expand-lg navbar-dark text-white">
+	<nav class="navbar navbar-expand-lg navbar-dark text-white mt-3">
 	  <a class="navbar-brand ml-3" href="./index.html">Anthony Culdora</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -60,25 +60,25 @@
 
 			<div class="col-md-4 text-center ">
 				<img id="icon" class="img-fluid rounded-circle" src="images/facebook.jpg">
-				<a class="text-white" href="https://www.facebook.com/Cooldoras/">Facebook</a>
+				<a class="text-white" target="_blank" href="https://www.facebook.com/Cooldoras/">Facebook</a>
 			</div> 
 
 			<div class="col-md-4 text-center">
 				<img id="icon" class="img-fluid rounded-circle" src="images/youtube.jpg">
-				<a class="text-white" href="https://www.youtube.com/channel/UCycQvnVl5zq4WXroQH5q_DA">Youtube Channel</a>
+				<a class="text-white" target="_blank" href="https://www.youtube.com/channel/UCycQvnVl5zq4WXroQH5q_DA">Youtube</a>
 			</div> 
 
 			<div class="col-md-4 text-center">
 				<img id="icon" class="img-fluid rounded-circle" src="images/gmail.jpg">
-				<a class="text-white" href="mailto: a18.culdora@gmail.com">Email</a>
+				<a class="text-white" target="_blank" href="mailto: a18.culdora@gmail.com">Email</a>
 			</div> 
 
 		</div>
 
 		<div>
 
-			<a href="./resume.pdf"><h3>A<span>B</span><span>OUT ME</span></h3></a>
-			<p1 id="blink" class="text-white ml-5 mr-5 mb-5">A hard-working, goal-oriented, Mechanical
+			<a target="_blank" href="./resume.pdf"><h3>A<span>B</span><span>OUT ME</span></h3></a>
+			<p1 align="justify" id="blink" class="text-white ml-5 mr-5 mb-5">A hard-working, goal-oriented, Mechanical
 Engineer with flexible skills, fast learning
 capabilities and efficient working style even
 under pressure. 
