--- a/pages/projectsection.html
+++ b/pages/projectsection.html
@@ -57,34 +57,34 @@
 
 				        	      
 				        	      <li class="project1">
-				        	        <a class="project1" href="../projects/AcadReadingListDec6/index.html">Git Commands Practice and Creating HTML Documents</a>
+				        	        <a class="project1" target="_blank" href="../projects/AcadReadingListDec6/index.html">Git Commands Practice and Creating HTML Documents</a>
 				        	      </li>
 				        	      <li class="project2">
-				        	        <a class="project2" href="../projects/s04/d1/index.html">Attributes and Hyperlinks</a>
+				        	        <a class="project2" target="_blank" href="../projects/s04/d1/index.html">Attributes and Hyperlinks</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s05/d1/index.html">Forms, Tables and Semantic HTML</a>
+				        	        <a class="project3" target="_blank" href="../projects/s05/d1/index.html">Forms, Tables and Semantic HTML</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s06/d1/index.html">Introduction and CSS Selectors</a>
+				        	        <a class="project3" target="_blank" href="../projects/s06/d1/index.html">Introduction and CSS Selectors</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s07/d1/index.html">Common Styling Properties & Positioning</a>
+				        	        <a class="project3" target="_blank" href="../projects/s07/d1/index.html">Common Styling Properties & Positioning</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s08/d1/index.html">Box Model</a>
+				        	        <a class="project3" target="_blank" href="../projects/s08/d1/index.html">Box Model</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s09/d1/index.html">Bootstrap - Introduction and Simple Styles</a>
+				        	        <a class="project3" target="_blank" href="../projects/s09/d1/index.html">Bootstrap - Introduction and Simple Styles</a>
 				        	      </li>
 				        	      <li class="project3">
-				        	        <a class="project3" href="../projects/s10/d1/index.html">Bootstrap - Grid System</a>
+				        	        <a class="project3" target="_blank" href="../projects/s10/d1/index.html">Bootstrap - Grid System</a>
 				        	      </li>
 				        	        <li class="project3">
-				        	        <a class="project3" href="../projects/s11/d1/index.html"> Bootstrap - Flex</a>
+				        	        <a class="project3" target="_blank" href="../projects/s11/d1/index.html"> Bootstrap - Flex</a>
 				        	      </li>
 				        	        <li class="project3">
-				        	        <a class="project3" href="../projects/s12/d1/index.html">Bootstrap - Components</a>
+				        	        <a class="project3" target="_blank" href="../projects/s12/d1/index.html">Bootstrap - Components</a>
 				        	      </li>
 				        	    </ul>
 				      </div>
