--- a/pages/contactsection.html
+++ b/pages/contactsection.html
@@ -69,7 +69,7 @@
 
 
 						<button type="button" class="btn btn-dark px-5 text-white" data-toggle="modal" data-target="#exampleModal">
-						                              Send Email
+						                              Send
 						                          </button>
 
 
